# aiogram_v3_template

./: .env.dist  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a0ab56fd4622_initial.py
systemd/: tgbot.service
tgbot/: __main__.py  config.py
tgbot/db/: create_pool.py
tgbot/db/models/: base.py  user.py
tgbot/db/models/mixins/: int_id_pk.py  timestamp.py
tgbot/db/repositories/: base.py  repository.py  user.py
tgbot/factory/: bot.py  dispatcher.py  runners.py
tgbot/filters/: admin.py
tgbot/handlers/: admin.py  user.py
tgbot/handlers/admins/: admin.py
tgbot/handlers/users/: user.py
tgbot/keyboards/: inline.py  reply.py
tgbot/keyboards/inline/: inline.py
tgbot/keyboards/reply/: reply.py
tgbot/middlewares/: database.py  throttling.py
tgbot/middlewares/inner/: __init__.py  throttling.py
tgbot/middlewares/outer/: __init__.py  database.py  user.py
tgbot/misc/: logger.py  mongostorage.py  set_bot_commands.py  states.py
tgbot/services/: broadcaster.py
