[tool.poetry]
name = "Aiogram Template"
version = "0.1.0"
description = ""
authors = ["bodaue"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.12.0"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"
cachetools = "^5.4.0"
redis = "^5.0.7"
types-cachetools = "^5.4.0"
betterlogging = "^1.0.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP", "SIM", "N", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4",
    "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SLOT", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA",
    "PLC", "PLE", "PLW", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]
ignore = [
    "E501", "ANN101", "ANN102", "ANN201", "ANN202", "ANN401", "RET502", "RET503", "RET504", "PLC0414",
    "SIM108", "S113", "RUF001", "G004", "DTZ005",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
follow_imports = "normal"
show_error_context = false
pretty = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tgbot.handlers.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
